--- a/initial_exp/config.yaml
+++ b/initial_exp/config.yaml
@@ -15,12 +15,18 @@ tabtransformer:
 
 llama:
   use_llama: true
-  model_name: "meta-llama/Llama-3.1-8B" 
+  model_name: "meta-llama/Meta-Llama-3-8B"
   start_layer: 0   # Start index of LLaMA layers to use
-  end_layer: 8     # End index (exclusive) of LLaMA layers to use
+  end_layer: 34     # End index (exclusive) of LLaMA layers to use
 
 training:
   criterion: 'cross_entropy'
   learning_rate: 0.00001
   epochs: 10
 
+# 86.61%
+# 86.54%
+# 86.43%
+# 86.09
+
+# torchrun --nproc_per_node=8 train.py
