--- a/initial_exp/retrieval_config.yaml
+++ b/initial_exp/retrieval_config.yaml
@@ -13,9 +13,16 @@ model:
   d_embedding: 34
   lite: true
   temperature: 1.0
-  sample_rate: 0.7
+  sample_rate: 0.1
+  use_llama: False
+  llama_model_name: "meta-llama/Llama-3.2-1B"
+  start_layer: 0
+  end_layer: 1
 
 training:
   learning_rate: 0.001
   weight_decay: 0.0002
   epochs: 10
+
+# without: 86.96
+# with: 86.52
