Added another experiment: non-trainable Fourier/Binning/Combo random feeatures followed by learnable scaling parameter

--- a/feature_encoding_exp/configs/adult.yaml
+++ b/feature_encoding_exp/configs/adult.yaml
@@ -28,6 +28,15 @@ BinningFeatures:
   delta_min: 0.1
   delta_max: 100
 
+ComboFeatures:
+  n_frequencies: 32
+  frequency_scale: 10
+  n_bins: 50
+  delta_scale: 30
+  delta_min: 0.1
+  delta_max: 100
+
+
 training:
   batch_size: 64
   epochs: 10
