Run hyperparam search for base models for additional datasets

--- a/configs/TabTransformer_FourierFeaturesCos_None_False_otto_group.yaml
+++ b/configs/TabTransformer_FourierFeaturesCos_None_False_otto_group.yaml
@@ -1,3 +1,6 @@
+FourierFeaturesCos:
+  frequency_scale: 0.21706278536745405
+  n_frequencies: 11
 TabTransformer:
   attn_dropout: 0.09011049659884665
   depth: 3
